{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 11,
  "lineage": "09896975-1815-9937-a292-7811c47af563",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "internal_domain_name_suffix": "vfoync4vmmyuveprm4cv5y53re.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/publicIPAddresses/vm-public-ip",
                "subnet_id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/virtualNetworks/multicloud-vnet/subnets/multicloud-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "multicloud-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkInterfaces/vm-nic|/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "network_interface_id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkInterfaces/vm-nic",
            "network_security_group_id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkSecurityGroups/vm-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkSecurityGroups/vm-nsg",
            "location": "westeurope",
            "name": "vm-nsg",
            "resource_group_name": "multicloud-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_rdp_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/networkSecurityGroups/vm-nsg/securityRules/Allow-RDP-SSH",
            "name": "Allow-RDP-SSH",
            "network_security_group_name": "vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "multicloud-rg",
            "source_address_prefix": "0.0.0.0/0",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/publicIPAddresses/vm-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vm-public-ip",
            "resource_group_name": "multicloud-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/virtualNetworks/multicloud-vnet/subnets/multicloud-subnet",
            "name": "multicloud-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "multicloud-rg",
            "virtual_network_name": "multicloud-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8b865da9-63d5-4a31-91f1-67855fe3fd8c",
            "id": "/subscriptions/740eca41-ea88-4c94-b73b-07eb31e9715a/resourceGroups/multicloud-rg/providers/Microsoft.Network/virtualNetworks/multicloud-vnet",
            "location": "westeurope",
            "name": "multicloud-vnet",
            "resource_group_name": "multicloud-rg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}